# TriageLM

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-gpu.txt
configs/: baseline.yaml  data.yaml  eval.yaml  finetuned.yaml  schema.yaml  train_qlora.yaml
docs/: overview.html
notebooks/: train_qlora.ipynb
reports/: baseline_llama3.2_3b.json  baseline_llama3.2_3b.md  baseline_triage-ft.json  baseline_triage-ft.md
scripts/: compare_reports.py  demo.py  manual_review.py  push_dataset.py  run_baseline.py  run_pipeline.py  smoke_test.py  train_qlora.py
src/ticket_triage/: __init__.py  config.py  schema.py
src/ticket_triage/data/: derive.py  download.py  explore.py  reformat.py  split.py
src/ticket_triage/eval/: harness.py  judge.py  metrics.py  parse.py  report.py  robustness.py
src/ticket_triage/models/: generator.py  ollama.py  prompts.py
src/ticket_triage/utils/: seed.py
tests/: test_derive.py  test_metrics.py  test_parse.py  test_reformat.py  test_schema.py  test_smoke.py  test_split.py
