[project]
name = "ticket-triage"
version = "0.1.0"
description = "Fine-tuning a small open LLM to convert raw support tickets into strict structured JSON (form, not facts)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

# CPU-only; must install on macOS. GPU libs live in requirements-gpu.txt.
dependencies = [
    "datasets>=2.19",
    "transformers>=4.44",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "rich>=13.7",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
tracking = [
    "wandb>=0.17",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_triage"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
packages = ["ticket_triage"]
mypy_path = "src"
ignore_missing_imports = true
